-------------
Version 0.6.3
-------------
- Fixed stripping of control characters on text from IRC (logon/logoff)

-------------
Version 0.6.2
-------------
- Fixed double removal on !is calls for people not on the notify list
- Fixed Tyranny Port
- Fixed Update to whois table
- Fixed Check for in PG for mass invite
- Fixed Links in Main blob for maintenance
- Added Optional Timer to Raffle as well as support for Item output useing &item& lowid highid ql name
- Fixed pgleave in Raid
- Added a Fix for blobs that are too large for preg_match
- Added Relaying of Buddy Actions to Allow !online to include other org (when dif host)
- Improved Relay Bot responsed on getting bot into the pg
- Added Encription of Chat option to relay (req mhash & mcrypt)
- Added ignore setting for those users who maybe not want in your gc but want to still have relay with other org
- Added option of not having other org prefix shown
- Added Raid Status to !online
- Changed link inside !online to use !alts if alts arnt shows in whois (can be changed to use !alts by setting too)
- Added Option to view all alts inc the name you used inside alts Blob
- Added a Trigger in alts module for a check in points module
- Added a Reason part to add and Remove Points
- Added Logging of points
- Improved working and added some check to help prevent points being on wrong char
- Fixed Issue with Default preference not being cached when changed

-------------
Version 0.6.1
-------------
- Fixed a bug in buddy list handling of the Roster core.
- setcraft now has the option to set it as None, Update by gerborg
- Moved ServerList into conf folder and Checked US server List, 9 Updated, 6 Added
- Logon Spam now has Setting as to what user level they have to be for logon spam, Default Member Only
- Fixed Command Links for Guild in AoC
- Enabled BotStatistics for AoC, Fixed Dim Issue, Fixed Output issue
- Fixed Issue with !admin del <group> <name> not working when name has number