@@ -2,6 +2,9 @@
 Version 0.6.3
 -------------
 - Fixed stripping of control characters on text from IRC (logon/logoff)
+- Fixed a bug where the quotes module would crash if there where no quotes in the database
+- Added option to relay to suffix relayed text with a characters main. Controlled using !set relay showmain on/off
+- Added option to truncate the name of the main character for relayed text.
 
 -------------
 Version 0.6.2
